# Math-Practice

./: .cspell.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml
Chapter1/: chapter1_1.ipynb  chapter1_2.ipynb  chapter1_3.ipynb
Chapter2/: chapter2_1.ipynb  chapter2_2.ipynb  chapter2_3.ipynb
Chapter3/: Chapter3_1.ipynb  Chapter3_2.ipynb  Chapter3_3.ipynb
Chapter4/: Chapter4_1.ipynb  Chapter4_2.ipynb  Chapter4_3.ipynb
Chapter5/: chapter5_1.ipynb  chapter5_2.ipynb  chapter5_3.ipynb
utils/: clock.py  itp.py  matrix.py
utils/__tests__/: itp_test.py
