[project]
name = "math-practice"
version = "0.0.5"
authors = [{ name = "chillcicada", email = "2210227279@qq.com" }]
dependcies = [
  # jupyter
  "jupyter>=1.0.0",
  # plot and scientific
  "matplotlib>=3.8.3",
  "scipy>=1.12.0",
  # test
  "pytest>=8.1.2",
  # lint and pre-commit
  "ruff>=0.4.1",
  "pre-commit>=3.7.0",
]

# ruff.toml
[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".idea",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "__pycache__",
]

line-length = 120
indent-width = 2

target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "lf"

docstring-code-format = true

docstring-code-line-length = "dynamic"
